spacing correction

--- a/style2.css
+++ b/style2.css
@@ -106,7 +106,7 @@ h2 {
   width: 800px;
   margin-right: auto;
   margin-left: auto;
-  margin-top: 40px;
+  margin-top: 80px;
   background-color: #87c9e9;
   border-radius: 10px;
   margin-bottom: 200px;
